--- a/archives/toutiao-search/2023-11-28.md
+++ b/archives/toutiao-search/2023-11-28.md
@@ -1,72 +1,82 @@
 # 2023-11-28
 
-共 169 条
+共 179 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 28 2023 13:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 28 2023 14:00:42 GMT+0800 (China Standard Time) -->
 1. [杨妞花被拐卖案二审择期宣判](https://so.toutiao.com/search?keyword=杨妞花被拐卖案二审择期宣判)
-1. [外卖员闯红灯被交警追到后下跪求情](https://so.toutiao.com/search?keyword=外卖员闯红灯被交警追到后下跪求情)
+1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
 1. [更多外资投向“中国制造”](https://so.toutiao.com/search?keyword=更多外资投向“中国制造”)
 1. [余华英丈夫落网 曾联手拐卖儿童](https://so.toutiao.com/search?keyword=余华英丈夫落网+曾联手拐卖儿童)
-1. [余承东曾称很多车企不会选华为](https://so.toutiao.com/search?keyword=余承东曾称很多车企不会选华为)
-1. [滴滴出行崩了引发大量用户吐槽](https://so.toutiao.com/search?keyword=滴滴出行崩了引发大量用户吐槽)
-1. [“清华北大”缘何争抢“鹅腿阿姨”](https://so.toutiao.com/search?keyword=“清华北大”缘何争抢“鹅腿阿姨”)
-1. [国考考生吐槽上午涂彩票下午抄资料](https://so.toutiao.com/search?keyword=国考考生吐槽上午涂彩票下午抄资料)
+1. [中国海军第44批护航编队抵达缅甸](https://so.toutiao.com/search?keyword=中国海军第44批护航编队抵达缅甸)
+1. [南京一头野猪横渡长江](https://so.toutiao.com/search?keyword=南京一头野猪横渡长江)
+1. [人贩余华英夫妇拐卖儿童细节](https://so.toutiao.com/search?keyword=人贩余华英夫妇拐卖儿童细节)
+1. [菊展结束千盆菊花被扔进垃圾车](https://so.toutiao.com/search?keyword=菊展结束千盆菊花被扔进垃圾车)
 1. [中学校领导男女关系混乱？警方辟谣](https://so.toutiao.com/search?keyword=中学校领导男女关系混乱？警方辟谣)
+1. [海底捞女员工面无表情跳“科目三”](https://so.toutiao.com/search?keyword=海底捞女员工面无表情跳“科目三”)
+1. [北京又一家住户房顶能吸扳手](https://so.toutiao.com/search?keyword=北京又一家住户房顶能吸扳手)
+1. [新型骗局套路深 好心帮忙却被坑](https://so.toutiao.com/search?keyword=新型骗局套路深+好心帮忙却被坑)
+1. [14岁1米94男孩看病去儿科就诊](https://so.toutiao.com/search?keyword=14岁1米94男孩看病去儿科就诊)
+1. [伍佰合肥演唱会引发退票潮](https://so.toutiao.com/search?keyword=伍佰合肥演唱会引发退票潮)
+1. [央视解读加沙临时停火期限延长](https://so.toutiao.com/search?keyword=央视解读加沙临时停火期限延长)
+1. [霍震霆父子四人和郭晶晶合照](https://so.toutiao.com/search?keyword=霍震霆父子四人和郭晶晶合照)
+1. [吴京口误说自己是闫妮老公](https://so.toutiao.com/search?keyword=吴京口误说自己是闫妮老公)
+1. [朝鲜侦察卫星拍到美军基地照片](https://so.toutiao.com/search?keyword=朝鲜侦察卫星拍到美军基地照片)
+1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
+1. [吴京说和闫妮谭松韵都是“包子脸”](https://so.toutiao.com/search?keyword=吴京说和闫妮谭松韵都是“包子脸”)
+1. [巴以冲突致埃及和约旦被牵连](https://so.toutiao.com/search?keyword=巴以冲突致埃及和约旦被牵连)
+1. [马斯克与以总理穿防弹衣访问遭袭地](https://so.toutiao.com/search?keyword=马斯克与以总理穿防弹衣访问遭袭地)
+1. [特斯拉要求刹车失灵女车主赔500万](https://so.toutiao.com/search?keyword=特斯拉要求刹车失灵女车主赔500万)
+1. [戴尔辟谣供应链撤离中国传闻](https://so.toutiao.com/search?keyword=戴尔辟谣供应链撤离中国传闻)
+1. [特斯拉回应“连撞11车事故”](https://so.toutiao.com/search?keyword=特斯拉回应“连撞11车事故”)
+1. [苹果公司重新依赖中国内地供应链](https://so.toutiao.com/search?keyword=苹果公司重新依赖中国内地供应链)
+1. [滴滴出行崩了引发大量用户吐槽](https://so.toutiao.com/search?keyword=滴滴出行崩了引发大量用户吐槽)
+1. [调查称58.7%青年拒绝躺平](https://so.toutiao.com/search?keyword=调查称58.7%青年拒绝躺平)
+1. [大爷大妈电梯收垃圾 大哥等近1小时](https://so.toutiao.com/search?keyword=大爷大妈电梯收垃圾+大哥等近1小时)
+1. [河南小伙靠军大衣7天卖出一年销量](https://so.toutiao.com/search?keyword=河南小伙靠军大衣7天卖出一年销量)
+1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
+1. [“科目三”舞蹈是什么](https://so.toutiao.com/search?keyword=“科目三”舞蹈是什么)
+1. [鹅腿阿姨凭什么抓住学生的胃和心](https://so.toutiao.com/search?keyword=鹅腿阿姨凭什么抓住学生的胃和心)
+1. [广电总局：电视开机应默认全屏直播](https://so.toutiao.com/search?keyword=广电总局：电视开机应默认全屏直播)
+1. [胡静林任国家税务总局党委书记](https://so.toutiao.com/search?keyword=胡静林任国家税务总局党委书记)
+1. [海外华为怎么不用鸿蒙](https://so.toutiao.com/search?keyword=海外华为怎么不用鸿蒙)
+1. [人大食堂自研烤鹅腿定价15元](https://so.toutiao.com/search?keyword=人大食堂自研烤鹅腿定价15元)
+1. [11岁男孩身高147cm家长称摆烂了](https://so.toutiao.com/search?keyword=11岁男孩身高147cm家长称摆烂了)
+1. [新西兰新任总理称将取消禁烟举措](https://so.toutiao.com/search?keyword=新西兰新任总理称将取消禁烟举措)
+1. [“清华北大”缘何争抢“鹅腿阿姨”](https://so.toutiao.com/search?keyword=“清华北大”缘何争抢“鹅腿阿姨”)
+1. [百余万乌军阵亡失踪？乌媒闹大乌龙](https://so.toutiao.com/search?keyword=百余万乌军阵亡失踪？乌媒闹大乌龙)
+1. [中国恒大被强执11亿](https://so.toutiao.com/search?keyword=中国恒大被强执11亿)
 1. [鹅腿阿姨老伴回应走红](https://so.toutiao.com/search?keyword=鹅腿阿姨老伴回应走红)
+1. [部分羽绒服标价2000元折后129元](https://so.toutiao.com/search?keyword=部分羽绒服标价2000元折后129元)
+1. [人口第一县为何2年关停95所幼儿园](https://so.toutiao.com/search?keyword=人口第一县为何2年关停95所幼儿园)
+1. [刚建的三层楼被拆 主人失声痛哭](https://so.toutiao.com/search?keyword=刚建的三层楼被拆+主人失声痛哭)
+1. [谢楠回应吴京口误](https://so.toutiao.com/search?keyword=谢楠回应吴京口误)
+1. [丁宁谈在北大当学生是种什么体验](https://so.toutiao.com/search?keyword=丁宁谈在北大当学生是种什么体验)
+1. [国考结束大批教育机构堵在考点门口](https://so.toutiao.com/search?keyword=国考结束大批教育机构堵在考点门口)
+1. [48岁教授说年轻人不加班是社会进步](https://so.toutiao.com/search?keyword=48岁教授说年轻人不加班是社会进步)
+1. [外卖员闯红灯被交警追到后下跪求情](https://so.toutiao.com/search?keyword=外卖员闯红灯被交警追到后下跪求情)
+1. [余承东曾称很多车企不会选华为](https://so.toutiao.com/search?keyword=余承东曾称很多车企不会选华为)
+1. [国考考生吐槽上午涂彩票下午抄资料](https://so.toutiao.com/search?keyword=国考考生吐槽上午涂彩票下午抄资料)
 1. [四川4人移动脚手架碰到高压线身亡](https://so.toutiao.com/search?keyword=四川4人移动脚手架碰到高压线身亡)
 1. [侯友宜问萧美琴是不是“台独”](https://so.toutiao.com/search?keyword=侯友宜问萧美琴是不是“台独”)
 1. [张雪峰给员工多发300元工资请吃火锅](https://so.toutiao.com/search?keyword=张雪峰给员工多发300元工资请吃火锅)
-1. [11岁男孩身高147cm家长称摆烂了](https://so.toutiao.com/search?keyword=11岁男孩身高147cm家长称摆烂了)
-1. [朝鲜侦察卫星拍到美军基地照片](https://so.toutiao.com/search?keyword=朝鲜侦察卫星拍到美军基地照片)
-1. [霍震霆父子四人和郭晶晶合照](https://so.toutiao.com/search?keyword=霍震霆父子四人和郭晶晶合照)
-1. [14岁1米94男孩看病去儿科就诊](https://so.toutiao.com/search?keyword=14岁1米94男孩看病去儿科就诊)
-1. [大爷大妈电梯收垃圾 大哥等近1小时](https://so.toutiao.com/search?keyword=大爷大妈电梯收垃圾+大哥等近1小时)
-1. [国考结束大批教育机构堵在考点门口](https://so.toutiao.com/search?keyword=国考结束大批教育机构堵在考点门口)
-1. [特斯拉要求刹车失灵女车主赔500万](https://so.toutiao.com/search?keyword=特斯拉要求刹车失灵女车主赔500万)
-1. [马斯克与以总理穿防弹衣访问遭袭地](https://so.toutiao.com/search?keyword=马斯克与以总理穿防弹衣访问遭袭地)
-1. [北京又一家住户房顶能吸扳手](https://so.toutiao.com/search?keyword=北京又一家住户房顶能吸扳手)
 1. [哈姆：防马克西就像防一辆兰博基尼](https://so.toutiao.com/search?keyword=哈姆：防马克西就像防一辆兰博基尼)
-1. [特斯拉回应“连撞11车事故”](https://so.toutiao.com/search?keyword=特斯拉回应“连撞11车事故”)
-1. [海底捞女员工面无表情跳“科目三”](https://so.toutiao.com/search?keyword=海底捞女员工面无表情跳“科目三”)
-1. [南京一头野猪横渡长江](https://so.toutiao.com/search?keyword=南京一头野猪横渡长江)
-1. [新型骗局套路深 好心帮忙却被坑](https://so.toutiao.com/search?keyword=新型骗局套路深+好心帮忙却被坑)
 1. [午评：北证50指数跌超3%](https://so.toutiao.com/search?keyword=午评：北证50指数跌超3%)
-1. [河南小伙靠军大衣7天卖出一年销量](https://so.toutiao.com/search?keyword=河南小伙靠军大衣7天卖出一年销量)
-1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
 1. [马克龙买刮刮乐连中两次](https://so.toutiao.com/search?keyword=马克龙买刮刮乐连中两次)
 1. [长安汽车将在泰国建立生产基地](https://so.toutiao.com/search?keyword=长安汽车将在泰国建立生产基地)
-1. [吴京说和闫妮谭松韵都是“包子脸”](https://so.toutiao.com/search?keyword=吴京说和闫妮谭松韵都是“包子脸”)
-1. [苹果公司重新依赖中国内地供应链](https://so.toutiao.com/search?keyword=苹果公司重新依赖中国内地供应链)
-1. [广电总局：电视开机应默认全屏直播](https://so.toutiao.com/search?keyword=广电总局：电视开机应默认全屏直播)
-1. [吴京口误说自己是闫妮老公](https://so.toutiao.com/search?keyword=吴京口误说自己是闫妮老公)
-1. [人大食堂自研烤鹅腿定价15元](https://so.toutiao.com/search?keyword=人大食堂自研烤鹅腿定价15元)
-1. [海外华为怎么不用鸿蒙](https://so.toutiao.com/search?keyword=海外华为怎么不用鸿蒙)
 1. [16岁女生没考上985遭父亲家暴](https://so.toutiao.com/search?keyword=16岁女生没考上985遭父亲家暴)
-1. [鹅腿阿姨凭什么抓住学生的胃和心](https://so.toutiao.com/search?keyword=鹅腿阿姨凭什么抓住学生的胃和心)
-1. [胡静林任国家税务总局党委书记](https://so.toutiao.com/search?keyword=胡静林任国家税务总局党委书记)
-1. [新西兰新任总理称将取消禁烟举措](https://so.toutiao.com/search?keyword=新西兰新任总理称将取消禁烟举措)
-1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
-1. [“科目三”舞蹈是什么](https://so.toutiao.com/search?keyword=“科目三”舞蹈是什么)
 1. [丁宁谈“上一秒队友下一秒对手”](https://so.toutiao.com/search?keyword=丁宁谈“上一秒队友下一秒对手”)
 1. [网红痞幼就盗用他人视频道歉](https://so.toutiao.com/search?keyword=网红痞幼就盗用他人视频道歉)
-1. [人口第一县为何2年关停95所幼儿园](https://so.toutiao.com/search?keyword=人口第一县为何2年关停95所幼儿园)
-1. [丁宁谈在北大当学生是种什么体验](https://so.toutiao.com/search?keyword=丁宁谈在北大当学生是种什么体验)
 1. [广东江海区委书记投案接受审查调查](https://so.toutiao.com/search?keyword=广东江海区委书记投案接受审查调查)
 1. [买25元肉绞成馅变32元拒付款被吐槽](https://so.toutiao.com/search?keyword=买25元肉绞成馅变32元拒付款被吐槽)
 1. [直击杨妞花被拐卖案二审开庭](https://so.toutiao.com/search?keyword=直击杨妞花被拐卖案二审开庭)
 1. [普仁医院从事代孕？武汉卫健委通报](https://so.toutiao.com/search?keyword=普仁医院从事代孕？武汉卫健委通报)
 1. [伊朗海军向美国航母打击群发出警告](https://so.toutiao.com/search?keyword=伊朗海军向美国航母打击群发出警告)
-1. [刚建的三层楼被拆 主人失声痛哭](https://so.toutiao.com/search?keyword=刚建的三层楼被拆+主人失声痛哭)
 1. [男子药店买钙片被强制推销保健品](https://so.toutiao.com/search?keyword=男子药店买钙片被强制推销保健品)
 1. [八年级女生一人拿下9张奖状](https://so.toutiao.com/search?keyword=八年级女生一人拿下9张奖状)
-1. [调查称58.7%青年拒绝躺平](https://so.toutiao.com/search?keyword=调查称58.7%青年拒绝躺平)
-1. [部分羽绒服标价2000元折后129元](https://so.toutiao.com/search?keyword=部分羽绒服标价2000元折后129元)
 1. [单位里退休的风向变了吗](https://so.toutiao.com/search?keyword=单位里退休的风向变了吗)
-1. [百余万乌军阵亡失踪？乌媒闹大乌龙](https://so.toutiao.com/search?keyword=百余万乌军阵亡失踪？乌媒闹大乌龙)
 1. [人大食堂宣布加紧研发烤鹅腿](https://so.toutiao.com/search?keyword=人大食堂宣布加紧研发烤鹅腿)
 1. [媒体：谁来为乌克兰的悲剧负责](https://so.toutiao.com/search?keyword=媒体：谁来为乌克兰的悲剧负责)
-1. [中国恒大被强执11亿](https://so.toutiao.com/search?keyword=中国恒大被强执11亿)
 1. [张雪峰回应给员工及家属买羽绒服](https://so.toutiao.com/search?keyword=张雪峰回应给员工及家属买羽绒服)
 1. [专家称未来房价上涨压力很大](https://so.toutiao.com/search?keyword=专家称未来房价上涨压力很大)
 1. [《南海归墟》独一份的“电子海味”](https://so.toutiao.com/search?keyword=《南海归墟》独一份的“电子海味”)
