--- a/archives/zhihu-search/2023-11-28.md
+++ b/archives/zhihu-search/2023-11-28.md
@@ -1,12 +1,13 @@
 # 2023-11-28
 
-共 27 条
+共 28 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Tue Nov 28 2023 14:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 28 2023 15:00:57 GMT+0800 (China Standard Time) -->
 1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
 1. [A股](https://www.zhihu.com/search?q=A股)
 1. [热水器推荐](https://www.zhihu.com/search?q=热水器推荐)
+1. [周信静](https://www.zhihu.com/search?q=周信静)
 1. [支原体肺炎](https://www.zhihu.com/search?q=支原体肺炎)
 1. [保研失败](https://www.zhihu.com/search?q=保研失败)
 1. [国考报名人数](https://www.zhihu.com/search?q=国考报名人数)
