--- a/archives/zhihu-search/2023-11-28.md
+++ b/archives/zhihu-search/2023-11-28.md
@@ -1,9 +1,9 @@
 # 2023-11-28
 
-共 28 条
+共 29 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Tue Nov 28 2023 15:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 28 2023 16:00:56 GMT+0800 (China Standard Time) -->
 1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
 1. [A股](https://www.zhihu.com/search?q=A股)
 1. [热水器推荐](https://www.zhihu.com/search?q=热水器推荐)
@@ -13,6 +13,7 @@
 1. [国考报名人数](https://www.zhihu.com/search?q=国考报名人数)
 1. [雅思词汇](https://www.zhihu.com/search?q=雅思词汇)
 1. [双非研究生有必要读么](https://www.zhihu.com/search?q=双非研究生有必要读么)
+1. [开题报告](https://www.zhihu.com/search?q=开题报告)
 1. [行测正确率要达到多少](https://www.zhihu.com/search?q=行测正确率要达到多少)
 1. [行测资料分析](https://www.zhihu.com/search?q=行测资料分析)
 1. [涉过愤怒的海](https://www.zhihu.com/search?q=涉过愤怒的海)
