--- a/archives/toutiao-search/2023-11-28.md
+++ b/archives/toutiao-search/2023-11-28.md
@@ -1,50 +1,72 @@
 # 2023-11-28
 
-共 242 条
+共 261 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 28 2023 18:00:44 GMT+0800 (China Standard Time) -->
-1. [杨妞花被拐卖案二审择期宣判](https://so.toutiao.com/search?keyword=杨妞花被拐卖案二审择期宣判)
+<!-- 最后更新时间 Tue Nov 28 2023 19:00:47 GMT+0800 (China Standard Time) -->
 1. [从也门发射的导弹溅落在美军舰附近](https://so.toutiao.com/search?keyword=从也门发射的导弹溅落在美军舰附近)
-1. [冬季呼吸道疾病多发人群如何防治](https://so.toutiao.com/search?keyword=冬季呼吸道疾病多发人群如何防治)
 1. [伊朗海军向美国航母打击群发出警告](https://so.toutiao.com/search?keyword=伊朗海军向美国航母打击群发出警告)
+1. [冬季呼吸道疾病多发人群如何防治](https://so.toutiao.com/search?keyword=冬季呼吸道疾病多发人群如何防治)
+1. [杨妞花被拐卖案二审择期宣判](https://so.toutiao.com/search?keyword=杨妞花被拐卖案二审择期宣判)
 1. [军大衣花棉袄在大学生中风靡](https://so.toutiao.com/search?keyword=军大衣花棉袄在大学生中风靡)
-1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
+1. [《美丽的草原我的家》原唱德德玛去世](https://so.toutiao.com/search?keyword=《美丽的草原我的家》原唱德德玛去世)
 1. [王思聪穿休闲服见地方领导](https://so.toutiao.com/search?keyword=王思聪穿休闲服见地方领导)
-1. [南京一头野猪横渡长江](https://so.toutiao.com/search?keyword=南京一头野猪横渡长江)
-1. [美国女院士帮孩子做手术？医院辟谣](https://so.toutiao.com/search?keyword=美国女院士帮孩子做手术？医院辟谣)
-1. [滴滴出行崩了引发大量用户吐槽](https://so.toutiao.com/search?keyword=滴滴出行崩了引发大量用户吐槽)
-1. [杨妞花：不接受余华英的任何道歉](https://so.toutiao.com/search?keyword=杨妞花：不接受余华英的任何道歉)
-1. [华为：新公司已向“四界”发出邀请](https://so.toutiao.com/search?keyword=华为：新公司已向“四界”发出邀请)
-1. [美国和朝鲜代表在安理会激烈交锋](https://so.toutiao.com/search?keyword=美国和朝鲜代表在安理会激烈交锋)
-1. [杨妞花回应余华英案二审](https://so.toutiao.com/search?keyword=杨妞花回应余华英案二审)
-1. [吴京口误说自己是闫妮老公](https://so.toutiao.com/search?keyword=吴京口误说自己是闫妮老公)
-1. [华为智界S7预订量已超2万台](https://so.toutiao.com/search?keyword=华为智界S7预订量已超2万台)
-1. [黑龙江一煤矿发生事故多人失联](https://so.toutiao.com/search?keyword=黑龙江一煤矿发生事故多人失联)
-1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
 1. [华为智界S7正式上市 售24.98万起](https://so.toutiao.com/search?keyword=华为智界S7正式上市+售24.98万起)
+1. [美国女院士帮孩子做手术？医院辟谣](https://so.toutiao.com/search?keyword=美国女院士帮孩子做手术？医院辟谣)
+1. [南京一头野猪横渡长江](https://so.toutiao.com/search?keyword=南京一头野猪横渡长江)
+1. [黑龙江一煤矿发生事故多人失联](https://so.toutiao.com/search?keyword=黑龙江一煤矿发生事故多人失联)
+1. [美国高中生遭围殴 拔刀还击捅死1人](https://so.toutiao.com/search?keyword=美国高中生遭围殴+拔刀还击捅死1人)
+1. [华为：新公司已向“四界”发出邀请](https://so.toutiao.com/search?keyword=华为：新公司已向“四界”发出邀请)
+1. [波司登回应高价羽绒服](https://so.toutiao.com/search?keyword=波司登回应高价羽绒服)
+1. [李亚鹏任广东东莞市石龙镇党委书记](https://so.toutiao.com/search?keyword=李亚鹏任广东东莞市石龙镇党委书记)
+1. [美国和朝鲜代表在安理会激烈交锋](https://so.toutiao.com/search?keyword=美国和朝鲜代表在安理会激烈交锋)
+1. [吴京口误说自己是闫妮老公](https://so.toutiao.com/search?keyword=吴京口误说自己是闫妮老公)
+1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
+1. [海底捞回应科目三让顾客不适](https://so.toutiao.com/search?keyword=海底捞回应科目三让顾客不适)
 1. [网红痞幼就盗用他人视频道歉](https://so.toutiao.com/search?keyword=网红痞幼就盗用他人视频道歉)
 1. [马斯克与以总理穿防弹衣访问遭袭地](https://so.toutiao.com/search?keyword=马斯克与以总理穿防弹衣访问遭袭地)
+1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
+1. [朱丹曾被好友骗光所有积蓄](https://so.toutiao.com/search?keyword=朱丹曾被好友骗光所有积蓄)
+1. [刚建的三层楼被拆 主人失声痛哭](https://so.toutiao.com/search?keyword=刚建的三层楼被拆+主人失声痛哭)
+1. [多位司机还原滴滴系统故障](https://so.toutiao.com/search?keyword=多位司机还原滴滴系统故障)
+1. [中国10家航司取消近9000趟赴泰航班](https://so.toutiao.com/search?keyword=中国10家航司取消近9000趟赴泰航班)
+1. [日本船只进钓鱼岛领海 中国海警驱离](https://so.toutiao.com/search?keyword=日本船只进钓鱼岛领海+中国海警驱离)
+1. [什么是“煤矿冲击地压顶板”事故](https://so.toutiao.com/search?keyword=什么是“煤矿冲击地压顶板”事故)
+1. [华为解决“烧钱”的车BU](https://so.toutiao.com/search?keyword=华为解决“烧钱”的车BU)
+1. [巴以获释者讲述悲喜经历](https://so.toutiao.com/search?keyword=巴以获释者讲述悲喜经历)
+1. [部分羽绒服标价2000元折后129元](https://so.toutiao.com/search?keyword=部分羽绒服标价2000元折后129元)
+1. [合肥科大硅谷高新孵化园二期将开工](https://so.toutiao.com/search?keyword=合肥科大硅谷高新孵化园二期将开工)
+1. [余承东再提AEB：特斯拉被“碾压”](https://so.toutiao.com/search?keyword=余承东再提AEB：特斯拉被“碾压”)
 1. [四川4人移动脚手架碰到高压线身亡](https://so.toutiao.com/search?keyword=四川4人移动脚手架碰到高压线身亡)
+1. [特斯拉回应“连撞11车事故”](https://so.toutiao.com/search?keyword=特斯拉回应“连撞11车事故”)
+1. [专家谈福建舰成功电磁弹射“小车”](https://so.toutiao.com/search?keyword=专家谈福建舰成功电磁弹射“小车”)
+1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
+1. [高校寝室开理发店15元一剪 手艺满分](https://so.toutiao.com/search?keyword=高校寝室开理发店15元一剪+手艺满分)
+1. [腾格尔悼念德德玛](https://so.toutiao.com/search?keyword=腾格尔悼念德德玛)
+1. [“科目三”舞蹈是什么](https://so.toutiao.com/search?keyword=“科目三”舞蹈是什么)
+1. [女子吐槽带娃去海底捞看到科目三不适](https://so.toutiao.com/search?keyword=女子吐槽带娃去海底捞看到科目三不适)
+1. [俄乌战争走到了尽头吗](https://so.toutiao.com/search?keyword=俄乌战争走到了尽头吗)
+1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
+1. [中国恒大被强执11亿](https://so.toutiao.com/search?keyword=中国恒大被强执11亿)
+1. [《我本是高山》：点亮梦想与希望](https://so.toutiao.com/search?keyword=《我本是高山》：点亮梦想与希望)
+1. [专家称未来房价上涨压力很大](https://so.toutiao.com/search?keyword=专家称未来房价上涨压力很大)
+1. [男子网上“炸金花”被骗11万多元](https://so.toutiao.com/search?keyword=男子网上“炸金花”被骗11万多元)
+1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
+1. [媒体：以链为媒助推经济全球化发展](https://so.toutiao.com/search?keyword=媒体：以链为媒助推经济全球化发展)
+1. [宋忠平：福建舰又取得重要进展](https://so.toutiao.com/search?keyword=宋忠平：福建舰又取得重要进展)
+1. [滴滴出行崩了引发大量用户吐槽](https://so.toutiao.com/search?keyword=滴滴出行崩了引发大量用户吐槽)
+1. [杨妞花：不接受余华英的任何道歉](https://so.toutiao.com/search?keyword=杨妞花：不接受余华英的任何道歉)
+1. [杨妞花回应余华英案二审](https://so.toutiao.com/search?keyword=杨妞花回应余华英案二审)
+1. [华为智界S7预订量已超2万台](https://so.toutiao.com/search?keyword=华为智界S7预订量已超2万台)
 1. [鹅腿阿姨出摊：200只鹅腿20分钟被抢光](https://so.toutiao.com/search?keyword=鹅腿阿姨出摊：200只鹅腿20分钟被抢光)
 1. [湖南一地集中销毁非法烟花爆竹](https://so.toutiao.com/search?keyword=湖南一地集中销毁非法烟花爆竹)
-1. [华为解决“烧钱”的车BU](https://so.toutiao.com/search?keyword=华为解决“烧钱”的车BU)
 1. [台民调：蔡职务表现不赞同率创新高](https://so.toutiao.com/search?keyword=台民调：蔡职务表现不赞同率创新高)
-1. [特斯拉回应“连撞11车事故”](https://so.toutiao.com/search?keyword=特斯拉回应“连撞11车事故”)
 1. [海底捞女员工面无表情跳“科目三”](https://so.toutiao.com/search?keyword=海底捞女员工面无表情跳“科目三”)
-1. [部分羽绒服标价2000元折后129元](https://so.toutiao.com/search?keyword=部分羽绒服标价2000元折后129元)
-1. [中国恒大被强执11亿](https://so.toutiao.com/search?keyword=中国恒大被强执11亿)
-1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
-1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
 1. [14岁1米94男孩看病去儿科就诊](https://so.toutiao.com/search?keyword=14岁1米94男孩看病去儿科就诊)
-1. [“科目三”舞蹈是什么](https://so.toutiao.com/search?keyword=“科目三”舞蹈是什么)
 1. [韩媒：韩国对华贸易不能出现动摇](https://so.toutiao.com/search?keyword=韩媒：韩国对华贸易不能出现动摇)
 1. [20天前被问责的财政局长要提拔了](https://so.toutiao.com/search?keyword=20天前被问责的财政局长要提拔了)
-1. [专家称未来房价上涨压力很大](https://so.toutiao.com/search?keyword=专家称未来房价上涨压力很大)
 1. [中日韩外长会收获哪些成果](https://so.toutiao.com/search?keyword=中日韩外长会收获哪些成果)
-1. [女子吐槽带娃去海底捞看到科目三不适](https://so.toutiao.com/search?keyword=女子吐槽带娃去海底捞看到科目三不适)
 1. [老人进店乞讨后鞠躬感谢](https://so.toutiao.com/search?keyword=老人进店乞讨后鞠躬感谢)
-1. [波司登回应高价羽绒服](https://so.toutiao.com/search?keyword=波司登回应高价羽绒服)
 1. [媒体：谁来为乌克兰的悲剧负责](https://so.toutiao.com/search?keyword=媒体：谁来为乌克兰的悲剧负责)
 1. [北斗系统助力深中通道“海底穿针”](https://so.toutiao.com/search?keyword=北斗系统助力深中通道“海底穿针”)
 1. [律师解读网红痞幼盗用他人视频](https://so.toutiao.com/search?keyword=律师解读网红痞幼盗用他人视频)
@@ -88,9 +110,7 @@
 1. [中日韩外长会释放哪些重要信号](https://so.toutiao.com/search?keyword=中日韩外长会释放哪些重要信号)
 1. [以色列释放33名巴勒斯坦被关押人员](https://so.toutiao.com/search?keyword=以色列释放33名巴勒斯坦被关押人员)
 1. [00后男孩开货车5年收入超百万](https://so.toutiao.com/search?keyword=00后男孩开货车5年收入超百万)
-1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
 1. [奶奶带5岁孙子每天晨跑3公里](https://so.toutiao.com/search?keyword=奶奶带5岁孙子每天晨跑3公里)
-1. [合肥科大硅谷高新孵化园二期将开工](https://so.toutiao.com/search?keyword=合肥科大硅谷高新孵化园二期将开工)
 1. [更多外资投向“中国制造”](https://so.toutiao.com/search?keyword=更多外资投向“中国制造”)
 1. [中国电视品牌或打破韩国市场格局](https://so.toutiao.com/search?keyword=中国电视品牌或打破韩国市场格局)
 1. [中学校领导男女关系混乱？警方辟谣](https://so.toutiao.com/search?keyword=中学校领导男女关系混乱？警方辟谣)
@@ -123,7 +143,6 @@
 1. [调查称58.7%青年拒绝躺平](https://so.toutiao.com/search?keyword=调查称58.7%青年拒绝躺平)
 1. [新西兰新任总理称将取消禁烟举措](https://so.toutiao.com/search?keyword=新西兰新任总理称将取消禁烟举措)
 1. [人口第一县为何2年关停95所幼儿园](https://so.toutiao.com/search?keyword=人口第一县为何2年关停95所幼儿园)
-1. [刚建的三层楼被拆 主人失声痛哭](https://so.toutiao.com/search?keyword=刚建的三层楼被拆+主人失声痛哭)
 1. [谢楠回应吴京口误](https://so.toutiao.com/search?keyword=谢楠回应吴京口误)
 1. [丁宁谈在北大当学生是种什么体验](https://so.toutiao.com/search?keyword=丁宁谈在北大当学生是种什么体验)
 1. [国考结束大批教育机构堵在考点门口](https://so.toutiao.com/search?keyword=国考结束大批教育机构堵在考点门口)
